Increased note z-index to ensure it's on top.

--- a/app/styles/stickynotes.scss
+++ b/app/styles/stickynotes.scss
@@ -1,7 +1,7 @@
 ﻿.note {
   position: absolute;
   box-shadow: 0 6px 12px #111111;
-  z-index: 100;
+  z-index: 9999;
 }
 
 .yellow-note-top {
